depends_core/src/value/snapshots/depends_core__macros__value__derive__tests__value_generics_custom_clean.snap
---
source: depends_core/src/macros/value/derive.rs
assertion_line: 165
expression: format_source(derive_value(input).to_string().as_str())
---
impl<T> ::depends::Named for Foo<T> {
    fn name() -> &'static str {
        "Foo"
    }
}
impl<T> ::depends::HashValue for Foo<T> {
    fn hash_value(&self, hasher: &mut impl ::std::hash::Hasher) -> ::depends::NodeHash {
        use ::std::hash::Hash;
        ::depends::NodeHash::Hashed({
            self.hash(hasher);
            hasher.finish()
        })
    }
}

